# bazel-go-starter-repo

./: .bazelrc  .bazelrc.user.example  .gitignore  .golangci.yml  BUILD  MODULE.bazel  Makefile  README.md  go.mod  go.sum  workspace_status.sh
.github/workflows/: build.yml  gazelle.yml  golangci-lint.yml  nogo.yml
cmd/http-server/: BUILD.bazel  main.go
tools/: go.sh  golangci-lint.sh  gopackagesdriver.sh  gopls.sh  latest_version_tag.sh  tools.go
